# matrix-calculator

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
backend/: main.py  pyproject.toml  requirements.txt
src/: App.tsx
src/components/: AuthDialog.tsx  Header.tsx  History.tsx  LoadingScreen.tsx  MatrixDisplay.tsx  MatrixInput.tsx  MatrixSizeSelector.tsx  OperationSelector.tsx  ResultDisplay.tsx
src/components/ui/: dialog.tsx
src/hooks/: useAuth.ts  useDarkMode.ts
src/lib/: supabase.ts
src/services/: api.ts
